# Challenge-Security

./: .env.example  .gitignore  Presentation_OPSIE_Equipe8_relu_Romain.pptx  README.md  dockerfile  main.py  notes.txt  pyproject.toml  test_visualization_service.ipynb
analyse_des_donnees_brutes/: analyse_logs.ipynb  ip_geolocation_map.html  ip_targets_geolocation_map.html
dataviz/: dataviz.py  dataviz_carto.py
docker/: dockerfile
src/app/: Dashboard.py  main.py  theme.py
src/app/pages/: 1_Exploration_DB.py  2_Maps.py  3_machine_learning.py  4_A_propos.py
src/app/services/: __init__.py  config.py  llm_options.py  llm_service.py  map_service.py  visualization_service.py
src/data/: mariadb_client.py  mock_data.py
src/detection_anomaly/: detection_anomaly.py
