[project]
name = "challenge-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "mistralai>=1.12.4",
    "cryptography>=46.0.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.47",
    "streamlit>=1.54.0",
    "plotly>=5.17.0",
    "numpy>=1.24.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "folium>=0.15.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
]
